@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-DNS
-version:            0.68_05
+version:            0.68_06
 abstract:           Perl DNS resolver module
 author:
     - Olaf Kolkman <olaf@net-dns.org>
