@@ -1,12 +1,12 @@
 package Net::DNS;
 
 #
-# $Id: DNS.pm 1049 2012-11-12 10:03:27Z willem $
+# $Id: DNS.pm 1052 2012-11-19 11:59:34Z willem $
 #
 use vars qw($SVNVERSION $VERSION);
 BEGIN {
-	$SVNVERSION = (qw$LastChangedRevision: 1049 $)[1];
-	$VERSION = '0.68_05';
+	$SVNVERSION = (qw$LastChangedRevision: 1052 $)[1];
+	$VERSION = '0.68_06';
 }
 
 
