@@ -1,6 +1,8 @@
-$Id: Changes 1038 2012-10-29 14:24:19Z willem $                       -*-text-*-
+$Id: Changes 1050 2012-11-17 21:22:15Z willem $                       -*-text-*-
 
 **** 0.69 ??? ??, 2012
+
+Feature added support for NID L32 L64 LP, RFC6742.
 
 Feature rt.cpan.org #62030
 
